# micro_X

./: .gitignore  .micro_x_history  Comprehensive_Analysis_of_micro_X_2025_05_11.md  README.md  ai_analysis_of_micro_X_2025_05_13.md  development_directives.md  external_tool.py  main.old.py  main.py  micro_X-A_Technical_Whitepaper.md  micro_X-A_Technical_Whitepaper_2025_05_18.md  micro_X.desktop  micro_X.old.sh  micro_X.sh  micro_X_ An_AI-Enhanced_Command-Line_Interface-A_Technical_Whitepaper_2025_05_12.md  micro_X_User_Guide.md  micro_X_v2.sh  micro_X_v3.sh  micro_X_v4.sh  micro_X_v5.sh  micro_X_v6.sh  project_tree.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  setup_micro_x_mac.md  setup_micro_x_mac.sh  setup_micro_x_mint.sh  setup_micro_x_termux.md  setup_micro_x_termux.sh  setup_micro_x_wsl.sh
config/: .history  .old.tmux.conf  .tmux.conf  .tmux_v2.conf  .tmux_v3.conf  .tmux_v4.conf  command_categories.json  default_aliases.json  default_command_categories.json  default_config.json  default_config.old.json  intents.json
core/: pty_handler.old.py  pty_handler.py
docs/: ai_analysis_of_micro_X_project_2025_05_14-23_30_00.md  analysis_of_micro_X_2025_05_14-16_41_00.md  analysis_of_micro_X_project_20250515_203802.md  analysis_of_micro_X_project_2025_05_17_120000.md  development_principles.md  generate_tree.md  micro_X_Code_Quality_Review_Accomplishments.md  micro_X_User_Guide.md  micro_X_testing_guide.md  micro_X_why_command_categories.txt  micro_x_testing_plan.md  plan_for_ansi_code_rendering_engine.md  review_of_micro_X_project.md  (+3 more)
(+245 files in other folders)
