[tool.poetry]
name = "micro-x"
version = "0.1.0"
description = "micro_X is an intelligent, interactive shell environment designed to bridge the gap between natural language and executable Linux commands. It leverages local large language models (LLMs) via Ollama to translate your queries, validate commands, explain their functionality, and streamline your command-line workflow."
authors = ["thurtz <tim.h@data-sci-guy.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
prompt-toolkit = ">=3.0.0"
ollama = ">=0.1.0"
numpy = ">=1.20.0"
langchain = ">=0.1.0"
langchain-core = ">=0.1.0"
langchain-community = ">=0.0.1"
langgraph = ">=0.0.1"
langchain-ollama = ">=0.0.1"
chromadb = ">=0.4.24"
beautifulsoup4 = ">=4.12.3"
langchain-chroma = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-mock = ">=3.0.0"
pytest-asyncio = ">=0.23.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=2.0.0"
myst-parser = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
